[MJMOD-20] Replace String.isBlank() from Java 11 with String.trim().isEmpty().